[tool.poetry]
name = "vooi2"
version = "0.1.0"
description = ""
authors = ["nguyen.van.hai <nguyen.van.hai@sun-asterisk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cloudscraper = "^1.2.71"
requests = "^2.32.3"
colorama = "^0.4.6"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
